fix: improve button color contrast for accessibility (#5363)

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -143,3 +143,7 @@ html[data-theme='dark'] {
   background-color: #ffd700;
   color: #1595de;
 }
+.secondarySpecialButton{
+  background-color: #f3f3f3;
+  color: #1a1a1a;
+}
